--- a/config.sample.json
+++ b/config.sample.json
@@ -1,8 +1,8 @@
 {
     "default_server_config": {
         "m.homeserver": {
-            "base_url": "https://matrix-client.matrix.org",
-            "server_name": "matrix.org"
+            "base_url": "https://matrix.flhsda.com",
+            "server_name": "flhsda.com"
         },
         "m.identity_server": {
             "base_url": "https://vector.im"
@@ -48,8 +48,8 @@
         "siteId": 1
     },
     "enable_presence_by_hs_url": {
-        "https://matrix.org": false,
-        "https://matrix-client.matrix.org": false
+        "https://flhsda.com": false,
+        "https://matrix.flhsda.com": false
     },
     "settingDefaults": {
         "breadcrumbs": true
